# ENGO645-Assignments

./: README.md  make.bat  requirements.txt  setup.cfg  test_02.ipynb
source/: conf.py  index.rst  rtd_requirements.txt
source/notebooks/L2/: plotting.ipynb  using_pandas.ipynb
source/notebooks/L3/: City_Boundary.dbf  City_Boundary.shp  City_Boundary.shx  Groceries_dataset.csv  Vaccination_Locations.csv  association_rules.ipynb  geopandas.ipynb
source/notebooks/L4/: classification_overview.ipynb  classification_with_python.ipynb
source/notebooks/L5/: Clustering_Geospatial_Data.ipynb
source/notebooks/L7/: matplotlib.ipynb
source/tutorials/L1/: assignment-1.rst  git_and_github.rst  overview.rst  prepration.rst  python_installation.rst
source/tutorials/L2/: libraries.rst  overview.rst  plotting.rst  tasks.rst  using_pandas.rst
source/tutorials/L3/: tasks.rst
source/tutorials/L4/: classification.rst  prepration.rst  tasks.rst
source/tutorials/L5/: clustering.rst  tasks.rst
source/tutorials/L6/: tasks.rst
