[metadata]
name = ENGO645-Lab
version = 2024
license = MIT
author = Reza Safarzadeh
url = https://github.com/safarzadeh-reza/ENGO645-Assignments
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = safarzadeh-reza
github_repo = ENGO645-Assignments